# faemiyah-demoscene_2015-04_64k-intro_junamatkailuintro

./: .gitignore  CMakeLists.txt  README  README.md  compile.sh  debug.props  defaults.cmake  defaults.props  junamatkailuintro.sln  junamatkailuintro.vcxproj  junamatkailuintro.vcxproj.filters  refresh.sh  release.props
rel/: junamatkailuintro_linux-armv6-rpi  junamatkailuintro_linux-armv6-rpi_compo
src/: CMakeLists.txt  dnload.h  intro.cpp
